--- a/projet-registation/src/main/webapp/css/event.css
+++ b/projet-registation/src/main/webapp/css/event.css
@@ -1,10 +1,10 @@
 .evenement-table th,.evenement-table td{
-	height:15rem;
+	height:11rem;
 	width:22rem;
 	font-size:1.2rem;
 }
 .cellule-tete, .cellule-tete td{
-	height:17rem;
+	height:13rem;
 }
 .cellule-tete .jour{
 	display:block;	
@@ -16,11 +16,14 @@
 	text-align:center;
 }
 #evenement{
+	padding: 0.2rem 0.5rem;
 	display:block;
 	text-align:center;
 	font-size:1.2rem;
-	height:2.4rem; 
-	margin: 1rem 1rem 1rem 1rem;
+	height:2.3rem; 
+	width:100%;
+	background-color:red;
+	border-color:red;
 }
 .evenement-titre{
 	width:100%;
