--- a/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
@@ -1,2 +1,2 @@
 <p>Coucou la team RegiStation !</p>
-<p>Coucou mat depuis devmatangular</p>
+<p>Coucou mat depuis devmatangulartestetststssqdqsd</p>
