@Controller - javascript indentation - test component content -
INCORPORATION DU module BOOTSTRAP

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
@@ -1,3 +1,6 @@
-<p>Coucou la team RegiStation !</p>
-<p>Coucou mat depuis devmatangulartestetststssqdqsd</p>
-<p>Yeah!!!!!!!</p>
+<!-- <app-header></app-header> -->
+<app-content></app-content>
+<!-- décomposer le content -->
+
+<!-- <app-footer></app-footer> -->
+
