Maj   bouton tableau de bord en fonction du role!

--- a/pfr-registation-backend/projet-registation/src/main/webapp/css/style.css
+++ b/pfr-registation-backend/projet-registation/src/main/webapp/css/style.css
@@ -2,6 +2,10 @@
 	padding: 50px 0;
 }
 
+#lien-responsable{
+    display: none;
+    margin-top: 100px;
+}
 .connexion-form form{
     background-color: #fff;
     max-width: 600px;
