--- a/pfr-registation-backend/projet-registation/src/main/webapp/css/event.css
+++ b/pfr-registation-backend/projet-registation/src/main/webapp/css/event.css
@@ -1,7 +1,7 @@
 .evenement-table th,.evenement-table td{
 	height:11rem;
 	width:22rem;
-	font-size:1.2rem;
+	font-size:1.1rem;
 }
 .cellule-tete, .cellule-tete td{
 	height:13rem;
@@ -16,14 +16,12 @@
 	text-align:center;
 }
 #evenement{
-	padding: 0.2rem 0.5rem;
+	padding-top:0.1rem;
+	margin-bottom: 0.1rem;
 	display:block;
-	text-align:center;
-	font-size:1.2rem;
-	height:2.3rem; 
+	font-size:1.1rem;
+	height:2.0rem; 
 	width:100%;
-	background-color:red;
-	border-color:red;
 }
 .evenement-titre{
 	width:100%;
