Mise en place Angular sous module utilisateur page accueil
page utilisateur

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-header></app-header> -->
-<app-content></app-content>
+
+<router-outlet></router-outlet>
+
+
 <!-- décomposer le content -->
 
 <!-- <app-footer></app-footer> -->
-
