--- a/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.css
@@ -1,15 +1,3 @@
-@font-face {
-    font-family: 'font1'; /*a name to be used later*/
-    src: url('/fa/webfont/Garmila.otf'); /*URL to font*/
-}
-@font-face {
-    font-family: 'font2'; /*a name to be used later*/
-    src: url('/fa/webfont/GentyDemo-Regular.otf'); /*URL to font*/
-}
-
-body{
-	height: 100%;
-}
 .connexion-form{
 	padding: 150px 0;
 	
@@ -100,10 +88,13 @@ body{
 	opacity: 0.4;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 120px;
+	
 }
-h1{
-	font-family: 'Vast Shadow', cursive;
+#nom-appli{
+    text-align: center;
+    font-family: 'Racing Sans One', cursive;
+    font-size: 6em;
+    opacity: 0.8;
 }
 
 @media (max-width: 576px) {
