Mise en forme du tableau via JS+AJAX. Aucun JSTL présent dans la JSP

--- a/pfr-registation-backend/projet-registation/src/main/webapp/css/event.css
+++ b/pfr-registation-backend/projet-registation/src/main/webapp/css/event.css
@@ -27,3 +27,12 @@
 	width:100%;
 	text-align:center;
 }
+#calTitre{
+	display:inline-block;
+	width:12rem;
+}
+#btnAujoudhui{
+	padding:0.6rem;
+	width:8rem;
+	height:3.1rem;
+}
