Ajout nouvelle "base" angular material

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.html
@@ -1,3 +1,4 @@
+<p>test content</p>
 <div class="container-fluid">
     <div class="row">
         <div class="col col-gauche" style="background-color: #F4E285; height: 757px;">
