--- a/pfr-registation-frontend/pfr-registation-angular/src/app/shared/base/base.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/shared/base/base.component.html
@@ -1,4 +1,3 @@
-<p>test acueuil user</p>
 <mat-toolbar>
     <mat-toolbar-row>
       <button mat-icon-button>
@@ -9,11 +8,11 @@
       <span class="menu-spacer"></span>
       <div>
         <a mat-button [routerLink]="'/utilisateur'"> Utilisateur </a>
-        <a mat-button [routerLink]="'/materiel'"> Matééééééériel </a>
-        <a mat-button [routerLink]="'/agenda'"> Agenda </a>
-        <a mat-button [routerLink]="'/documents'"> Documents </a>
-        <a mat-button [routerLink]="'/autres'"> Autres </a>
-        <a mat-button [routerLink]="'/autres2'"> Autres </a>
+        <a mat-button [routerLink]="'/create-account'"> Create Account </a>
+        <a mat-button [routerLink]="'/contacts'"> Contacts </a>
+        <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
+        <a mat-button [routerLink]="'/activities'"> Activities </a>
+        <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
   
       </div>
     </mat-toolbar-row>
