push perso afin de récup ANGULAR
gestion des imports exports shared

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/accueil/accueil.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/accueil/accueil.component.html
@@ -2,18 +2,18 @@
 <mat-toolbar>
     <mat-toolbar-row>
       <button mat-icon-button>
-        <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+        <mat-icon (click)="sidenav.toggle()">test</mat-icon>
       </button>
       <a href="###"><img src="assets/images/logo.png" alt="logo" id="logoNavbar"></a>
       <h1>RegiStation</h1>
       <span class="menu-spacer"></span>
       <div>
-        <a mat-button [routerLink]="'/utilisateur'"> Utilisateur </a>
+        <!-- <a mat-button [routerLink]="'/utilisateur'"> Utilisateur </a>
         <a mat-button [routerLink]="'/materiel'"> Matééééééériel </a>
         <a mat-button [routerLink]="'/agenda'"> Agenda </a>
         <a mat-button [routerLink]="'/documents'"> Documents </a>
         <a mat-button [routerLink]="'/autres'"> Autres </a>
-        <a mat-button [routerLink]="'/autres2'"> Autres </a>
+        <a mat-button [routerLink]="'/autres2'"> Autres </a> -->
   
       </div>
     </mat-toolbar-row>
@@ -44,3 +44,4 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
+  
