--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/base/base.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/base/base.component.html
@@ -1,45 +1,50 @@
 <mat-toolbar>
-    <mat-toolbar-row>
-      <button mat-icon-button>
-        <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
-      </button>
-      <a href="###"><img src="assets/images/logo.png" alt="logo" id="logoNavbar"></a>
-      <h1>RegiStation</h1>
-      <span class="menu-spacer"></span>
-      <div>
-        <a mat-button [routerLink]="'/utilisateur'"> Utilisateur </a>
-        <a mat-button [routerLink]="'/create-account'"> Create Account </a>
-        <a mat-button [routerLink]="'/contacts'"> Contacts </a>
-        <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
-        <a mat-button [routerLink]="'/activities'"> Activities </a>
-        <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
-  
-      </div>
-    </mat-toolbar-row>
-  
-    <!-- <mat-toolbar-row>
+  <mat-toolbar-row>
+    <button mat-icon-button>
+      <mat-icon (click)="sidenav.toggle()"><i class="fa fa-bars" style='font-size:25px;'></i></mat-icon>
+    </button>
+    <a href="###"><img src="assets/images/logo.png" alt="logo" id="logoNavbar"></a>
+    <h1>RegiStation</h1>
+    <span class="menu-spacer"></span>
+    <div class="container" id="icones-right" style="text-align: right;">
+      <a mat-button [routerLink]="'/create-account'">M. Utilisateur<i class="fa fa-user"
+          style='font-size:25px;'></i></a>
+      <a mat-button [routerLink]="'/contacts'"> <i class="fa fa-bell" style='font-size:25px;'></i> </a>
+      <a mat-button [routerLink]="'/create-contact'"><i class="fa fa-sign-out" style='font-size:25px;'></i> </a>
+    </div>
+  </mat-toolbar-row>
+  <!-- <mat-toolbar-row>
         <span style="font-size: 12px;"></span>
       </mat-toolbar-row> -->
-  </mat-toolbar>
-  
-  <mat-sidenav-container>
-    <mat-sidenav #sidenav>
-      <mat-nav-list>
-  
-        <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
-        <a mat-list-item [routerLink]="'/create-account'"> Create Account </a>
-        <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
-        <a mat-list-item [routerLink]="'/create-contact'"> Create Contact </a>
-        <a mat-list-item [routerLink]="'/activities'"> Activities </a>
-        <a mat-list-item [routerLink]="'/create-activity'"> Create Activity </a>
-        <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
-  
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <div style="height: 100vh;">
-  
-        <router-outlet></router-outlet>
-      </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <mat-nav-list>
+
+      <!-- <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+      <mat-menu #menu="matMenu">
+        <i class="fa fa-sign-out" style='font-size:25px;'></i>
+        <button mat-menu-item>Item 1</button>
+        <button mat-menu-item>Item 2</button>
+      </mat-menu> -->
+
+      <a mat-list-item [routerLink]="'/materiel'"> Agenda </a>
+      <a mat-list-item [routerLink]=""> Dashboard </a>
+      <a mat-list-item [routerLink]=""> Documents </a>
+      <a mat-list-item [routerLink]=""> Materiel </a>
+      <a mat-list-item [routerLink]=""> "Problèmes" </a>
+      <a mat-list-item [routerLink]=""> Boutique </a>
+      <a mat-list-item [routerLink]=""> Garage </a>
+      <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Fermer</a>
+
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div style="height: 100vh;">
+      <img src="assets/images/logo.png" alt="logo-background" id="logo-background">
+
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
