--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/accueil/accueil.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/accueil/accueil.component.html
@@ -1,47 +1,2 @@
-<p>test acueuil user</p>
-<mat-toolbar>
-    <mat-toolbar-row>
-      <button mat-icon-button>
-        <mat-icon (click)="sidenav.toggle()">test</mat-icon>
-      </button>
-      <a href="###"><img src="assets/images/logo.png" alt="logo" id="logoNavbar"></a>
-      <h1>RegiStation</h1>
-      <span class="menu-spacer"></span>
-      <div>
-        <!-- <a mat-button [routerLink]="'/utilisateur'"> Utilisateur </a>
-        <a mat-button [routerLink]="'/materiel'"> Matééééééériel </a>
-        <a mat-button [routerLink]="'/agenda'"> Agenda </a>
-        <a mat-button [routerLink]="'/documents'"> Documents </a>
-        <a mat-button [routerLink]="'/autres'"> Autres </a>
-        <a mat-button [routerLink]="'/autres2'"> Autres </a> -->
-  
-      </div>
-    </mat-toolbar-row>
-  
-    <!-- <mat-toolbar-row>
-        <span style="font-size: 12px;"></span>
-      </mat-toolbar-row> -->
-  </mat-toolbar>
-  
-  <mat-sidenav-container>
-    <mat-sidenav #sidenav>
-      <mat-nav-list>
-  
-        <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
-        <a mat-list-item [routerLink]="'/create-account'"> Create Account </a>
-        <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
-        <a mat-list-item [routerLink]="'/create-contact'"> Create Contact </a>
-        <a mat-list-item [routerLink]="'/activities'"> Activities </a>
-        <a mat-list-item [routerLink]="'/create-activity'"> Create Activity </a>
-        <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
-  
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <div style="height: 100vh;">
-  
-        <router-outlet></router-outlet>
-      </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-  
+<p>TESTOUILLE</p>
+<app-base></app-base>
