Clean utilisation angular material

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/app.component.html
@@ -1,11 +1,1 @@
-<!-- <app-header></app-header> -->
-
-
-
-
-<router-outlet></router-outlet>
-
-
-<!-- décomposer le content -->
-
-<!-- <app-footer></app-footer> -->
+<app-header></app-header>
