Calendrier AJAX : Evènement s'affichent correctement.

--- a/pfr-registation-backend/projet-registation/src/main/webapp/css/event.css
+++ b/pfr-registation-backend/projet-registation/src/main/webapp/css/event.css
@@ -1,6 +1,6 @@
-.evenement-table th,.evenement-table td{
+.evenement-table td{
 	height:11rem;
-	width:22rem;
+	width:18rem;
 	font-size:1.1rem;
 }
 .cellule-tete, .cellule-tete td{
