--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
@@ -11,3 +11,10 @@
 .mat-sidenav{
   background-color: lightgray;
 }
+#logo-big{
+  opacity: 0.2;
+  height: 100%;
+}
+.icone-side{
+  margin-right: 5px;
+}
