--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -32,8 +32,8 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div style="height: 92vh;">
-      <img src="/assets/images/logo-big.png" alt="logo-big" id="logo-big">
+    <div >
+      <img src="/assets/images/logo-big2.png" alt="logo-big" id="logo-big">
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
