--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
@@ -3,6 +3,9 @@
   }
 .mat-toolbar{
   background-color:lightslategray;
+  position: sticky;
+  top: 0; /* Sets the sticky toolbar to be on top */
+  z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
 }
 #logo-navbar{
   width: 50px;
