--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -33,7 +33,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <div >
-      <img src="/assets/images/logo-big2.png" alt="logo-big" id="logo-big">
+      <!-- <img src="/assets/images/logo-big2.png" alt="logo-big" id="logo-big"> -->
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
