--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/fond/fond.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/fond/fond.component.html
@@ -1,3 +1,1 @@
-<div class="container-fluid" id="monContainer">
-    <img src="assets/images/logo.png" alt="logo" id="logo-back">
-</div>
+<img src="assets/images/logo-big2.png" alt="logo background" id="logo-big">
