Navbar décassée, elle est susceptible...

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -32,7 +32,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div >
+    <div style="height: 88vh;">
       <!-- <img src="/assets/images/logo-big2.png" alt="logo-big" id="logo-big"> -->
       <router-outlet></router-outlet>
     </div>
