maj materiel, form

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.html
@@ -36,4 +36,4 @@
 </div>
 
 <!-- Affichage de la team -->
-<app-presentation-team></app-presentation-team>
+<!-- <app-presentation-team></app-presentation-team> -->
