Test 1 templatedrivenform, push avant reactive forms et json server

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
@@ -12,7 +12,7 @@
   margin-right: 10px;
 }
 .mat-sidenav{
-  background-color: lightgray;
+  background-color:lightyellow;
 }
 #logo-big{
   opacity: 0.2;
