--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/accueil/accueil.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/accueil/accueil.component.html
@@ -1,2 +1,4 @@
-<p>Coucou Utilisateur accueil</p>
-<mat-icon>home</mat-icon>
+<a mat-raised-button [routerLink]="'/utilisateur/liste'">
+    <mat-icon class="icone-side">groups</mat-icon>L' équipe
+</a>
+<router-outlet></router-outlet>
