--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/ajouter-materiel/ajouter-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/ajouter-materiel/ajouter-materiel.component.html
@@ -1,7 +1,14 @@
-<div id="form-materiel"  (ngSubmit)=ajouterMateriel()>
+<div id="form-materiel"  (ngSubmit)=addMateriel()>
 
-    <form #ajoutMaterielForm=ngForm>
+    <form #ajoutMaterielForm=ngForm  (ngSubmit)=addMateriel()>
 
+
+        <div>
+            Id: <input type="number" name=id [(ngModel)]=materiel.id required #id="ngModel">
+        </div>
+        <div [hidden]="id.valid || id.pristine">
+            La référence est obligatoire.
+        </div>
         <div>
             Référence: <input type="text" name=ref [(ngModel)]=materiel.ref required #ref="ngModel">
         </div>
@@ -11,25 +18,25 @@
         </div>
 
         <div>
-            Marque: <input type="text" name=marque_materiel [(ngModel)]=materiel.marque_materiel required
-                #marque_materiel="ngModel">
+            Marque: <input type="text" name=marque [(ngModel)]=materiel.marque required
+                #marque="ngModel">
         </div>
-        <div [hidden]="marque_materiel.valid || marque_materiel.pristine">
+        <div [hidden]="marque.valid || marque.pristine">
             La marque est obligatoire.
         </div>
 
         <div>
-            Modele: <input type="text" name=modele_materiel [(ngModel)]=materiel.modele_materiel required
-                #modele_materiel="ngModel">
+            Modele: <input type="text" name=modele [(ngModel)]=materiel.modele required
+                #modele="ngModel">
         </div>
-        <div [hidden]="modele_materiel.valid || modele_materiel.pristine">
+        <div [hidden]="modele.valid || modele.pristine">
             Le modele est obligatoire.
         </div>
 
         <div>
-            Prix: <input type="number" name=prix_achat [(ngModel)]=materiel.prix_achat required #prix_achat="ngModel">
+            Prix: <input type="number" name=prix [(ngModel)]=materiel.prix required #prix="ngModel">
         </div>
-        <div [hidden]="prix_achat.valid || prix_achat.pristine">
+        <div [hidden]="prix.valid || prix.pristine">
             La prix d'achat est obligatoire.
         </div>
 
@@ -67,3 +74,32 @@
         </div>
     </form>
 </div>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id du matériel</th>
+            <th>Référence</th>
+            <th>Marque</th>
+            <th>Modèle</th>
+            <th>Prix d'achat</th>
+            <th>Etat actuel</th>
+            <th>Date d'achat</th>
+            <th>Type de matériel</th>
+            <th>Localisation</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let mat of list_materiel">
+            <td>{{mat.id}}</td>
+            <td>{{mat.ref}}</td>
+            <td>{{mat.marque}}</td>
+            <td>{{mat.modele}}</td>
+            <td>{{mat.prix}}</td>
+            <td>{{mat.etat}}</td>
+            <td>{{mat.date_achat}}</td>
+            <td>{{mat.type_materiel}}</td>
+            <td>{{mat.localisation}}</td>
+        </tr>
+    </tbody>
+</table>
