--- a/pfr-registation-frontend/pfr-registation-angular/src/app/user-list/user-list.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/user-list/user-list.component.html
@@ -5,3 +5,12 @@
         id : {{utilisateur.id}} nom :  {{utilisateur.name}} email : {{utilisateur.email}}
     </li>
 </ul>
+
+<ul>
+    <li>
+    <a routerLink="/userstest" class="btn btn-info">List Users</a>
+</li>
+    <li>
+        <a routerLink="/adduser" class="btn btn-info">Add User</a>
+    </li>
+</ul>
