--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.html
@@ -8,19 +8,45 @@
 
 <div class="content" fxLayout="row wrap" fxLayoutGap="20px grid">
     <!-- Pour afficher plusieurs cards à remplasser par data bdd-->
-    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let num of [1,3,4,5,6,7]">
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let utilisateur of utilisateurs">
         <!--  -->
         <mat-card class="mat-elevation-z4">
             <mat-card-header>
                 <img mat-card-avatar src="/assets/images/aurel.jpg" style="width: 40px;">
-                <mat-card-title>Toad</mat-card-title>
-                <mat-card-subtitle>Mushroom fanatic</mat-card-subtitle>
+                <mat-card-title>{{utilisateur.prenom}}</mat-card-title>
+                <mat-card-subtitle>{{utilisateur.nom}}</mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image src="/assets/images/toad.jpg" alt="Photo of a Shiba Inu">
             <mat-card-content>
-                <p>
-                    blabla sur la personne...
-                </p>
+                <mat-list dense>
+                    <mat-list-item>
+                        <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                        {{utilisateur.matricule}}
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon matPrefix class="icone-info-card">cake</mat-icon>
+                       {{utilisateur.dateDeNaissance}}
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon matPrefix class="icone-info-card">alternate_email</mat-icon>
+                       {{utilisateur.mail}}
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon matPrefix class="icone-info-card">phone</mat-icon>
+                        {{utilisateur.tel}}
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon matPrefix class="icone-info-card">euro</mat-icon>
+                       {{utilisateur.salaire}}
+                    </mat-list-item>
+                    <mat-list-item>
+                        <mat-icon matPrefix class="icone-info-card">military_tech</mat-icon>
+                      
+                        <div *ngIf="utilisateur.responsable; else elseBlock"> Responsable</div>
+                        <ng-template #elseBlock> Employé</ng-template>
+                        
+                    </mat-list-item>
+                </mat-list>               
             </mat-card-content>
             <mat-card-actions>
                 <button mat-button>Modifier</button>
@@ -31,9 +57,16 @@
 </div>
 
 
-<p>test</p>
-<ul>
-    <li *ngFor="let utilisateur of utilisateurs">
-        {{utilisateur.prenom}} , {{utilisateur.nom}}
-    </li>
-</ul>
+<p>test affichage de la liste</p>
+
+<mat-list dense>
+    <mat-list-item *ngFor="let utilisateur of utilisateurs">
+        matricule : {{utilisateur.matricule}} , {{utilisateur.prenom}} , {{utilisateur.nom}} , 
+
+        {{utilisateur.dateDeNaissance | date:'d-M-y'}}
+
+         , {{utilisateur.salaire}} , 
+        {{utilisateur.mail}} , {{utilisateur.tel}} , 
+        {{utilisateur.responsable}} 
+    </mat-list-item>
+</mat-list>
