Lien entre Evenement Rest API -> Angular

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -23,7 +23,7 @@
 
       <!-- attention aux liens a qui rechargent la page a remplacer par button -->
       <a mat-list-item [routerLink]="'/utilisateur'"><mat-icon class="icone-side">dashboard</mat-icon>Tableau de bord</a>
-      <a mat-list-item [routerLink]="'/agenda'"><mat-icon class="icone-side">today</mat-icon>Agenda</a>
+      <a mat-list-item [routerLink]="'/evenement'"><mat-icon class="icone-side">today</mat-icon>Agenda</a>
       <a mat-list-item [routerLink]="'/document'"><mat-icon class="icone-side">description</mat-icon>Documents</a>
       <a mat-list-item [routerLink]="'/materiel'"><mat-icon class="icone-side">local_gas_station</mat-icon>Matériel</a>
       <a mat-list-item [routerLink]="'/moniteur'"><mat-icon class="icone-side">video_label</mat-icon>Moniteur</a>
