--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.html
@@ -50,7 +50,7 @@
             </mat-card-content>
             <mat-card-actions>
                 <button mat-button>Modifier</button>
-                <button mat-button>Supprimer</button>
+                <button mat-raised-button color="warn">Supprimer</button>
             </mat-card-actions>
         </mat-card>
     </div>
