--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-form/utilisateur-form.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-form/utilisateur-form.component.css
@@ -8,3 +8,7 @@
     margin-left: 2.3rem;
     margin-right: auto;
 }
+.bouton-ajouter{
+    color:#fff;
+     background-image: linear-gradient(to right, #CDDFA0, #6FD08C );
+}
