--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.html
@@ -49,7 +49,7 @@
                 </mat-list>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-button>Modifier</button>
+                <button mat-button [disabled]>Modifier</button>
 
                 <form #deleteUtilisateur=ngForm>
                     <input type="hidden" value="{{utilisateur.matricule}}">
