--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
@@ -1,30 +1,33 @@
-<p>liste-materiel works!</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Id du matériel</th>
-            <th>Référence</th>
-            <th>Marque</th>
-            <th>Modèle</th>
-            <th>Prix d'achat</th>
-            <th>Etat actuel</th>
-            <th>Date d'achat</th>
-            <th>Type de matériel</th>
-            <th>Localisation</th>
+
+
+<table class="transparent" role="row">
+    <caption id="caption">Listing du matériel</caption>
+    <thead >
+        <tr >
+            <th  scope="col">Id du matériel</th>
+            <th  scope="col">Référence</th>
+            <th  scope="col">Marque</th>
+            <th  scope="col">Modèle</th>
+            <th  scope="col">Prix d'achat</th>
+            <th  scope="col">Etat actuel</th>
+            <th scope="col">Date d'achat</th>
+            <th  scope="col">Type de matériel</th>
+            <th  scope="col">Localisation</th>
         </tr>
     </thead>
-    <tbody>
-        <tr *ngFor="let mat of list_materiel">
-            <td>{{mat.idMat}}</td>
-            <td>{{mat.ref}}</td>
-            <td>{{mat.marque}}</td>
-            <td>{{mat.modele}}</td>
-            <td>{{mat.prix}}</td>
-            <td>{{mat.etat}}</td>
-            <td>{{mat.dateAchat}}</td>
-            <td>{{mat.typeMateriel}}</td>
-            <td>{{mat.localisation}}</td>
+    <tbody >
+        <tr *ngFor="let mat of list_materiel" >
+            <td data-label="Id du matériel" >{{mat.idMat}}</td>
+            <td data-label="Référence" >{{mat.ref}}</td>
+            <td data-label="Marque" >{{mat.marque}}</td>
+            <td data-label="Modèle" >{{mat.modele}}</td>
+            <td data-label="Prix" >{{mat.prix}}</td>
+            <td data-label="Etat" >{{mat.etat}}</td>
+            <td data-label="Date d'achat" >{{mat.dateAchat}}</td>
+            <td data-label="Type de matériel" >{{mat.typeMateriel}}</td>
+            <td data-label="Localisation" >{{mat.localisation}}</td>
         </tr>
     </tbody>
 </table>
+
 
