--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
@@ -32,3 +32,12 @@ CSS
 .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+
+.sidenav-tool{
+ /* background-color:#ffd15b ;  */
+ background-image: url(/assets/images/logo.png);
+ background-repeat:no-repeat;
+background-position:center;
+height : 88vh;
+
+}
