--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -1,3 +1,5 @@
+
+
 <mat-toolbar color="primary">
   <button mat-icon-button (click)="sidenav.toggle()" class="icone-bars" aria-label="icone-bars">
     <mat-icon>menu</mat-icon>
@@ -17,7 +19,7 @@
 </mat-toolbar>
 
 <!-- DEBUT sidenav container  -->
-<mat-sidenav-container>
+<mat-sidenav-container class="sidenav-tool" >
   <mat-sidenav #sidenav>
     <mat-nav-list>
 
@@ -32,7 +34,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div style="height: 88vh;width: 95%;">
+    <div  style="height: 95vh;width: 95%;">
       <!-- <img src="/assets/images/logo-big2.png" alt="logo-big" id="logo-big"> -->
       <router-outlet></router-outlet>
     </div>
