--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
@@ -33,11 +33,10 @@ CSS
   margin-left: 8px;
 }
 
-.sidenav-tool{
+/* .sidenav-tool{
  /* background-color:#ffd15b ;  */
- background-image: url(/assets/images/logo.png);
+ /* background-image: url(/assets/images/cercle.png);
  background-repeat:no-repeat;
 background-position:center;
-height : 88vh;
-
-}
+height : 88vh; */
+/* } */
