--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.css
@@ -1,95 +1,129 @@
-body {
-    font-family: "Open Sans", sans-serif;
-    line-height: 1.25;
-  }
-  
-  table {
-    border: 1px solid #ccc;
-    margin-top: 10%;
-    margin-left: 10%;
-    padding: 0;
-    width: 90%;
-    table-layout: fixed;
-    
-    
-  }
-  
-  table caption {
-    font-size: 1.5em;
-    margin: .5em 0 .75em;
-  }
-  
-  table tr {
 
-    padding: .35em;
-  }
   
-  table th,
-  table td {
-    padding: .625em;
-    text-align: center;
-  }
-  
-  table th {
-    font-size: .85em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  
-  @media screen and (max-width: 600px) {
-    table {
-      border: 0;
-      
-    }
-  
-    table caption {
-      font-size: 1.3em;
-    }
-    
-    table thead {
-      border: none;
-      clip: rect(0 0 0 0);
-      height: 1px;
-      margin: -1px;
-      overflow: hidden;
-      padding: 0;
-      position: absolute;
-      width: 1px;
-    }
-    
-    table tr {
-      border-bottom: 3px solid #ddd;
-      display: block;
-      margin-bottom: .625em;
-    }
-    
-    table td {
-      border-bottom: 1px solid #ddd;
-      display: block;
-      font-size: .8em;
-      text-align: right;
-    }
-    
-    table td::before {
-      /*
-      * aria-label has no advantage, it won't be read inside a table
-      content: attr(aria-label);
-      */
-      content: attr(data-label);
-      float: left;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-    
-    table td:last-child {
-      border-bottom: 0;
-    }
-  }
+  * {font-family: 'Open Sans', sans-serif;}
 
-  .transparent{
-    background: rgba(0, 0, 0, 0.01);
-   border-radius: 5px 5px 0 0 ;
-   overflow: hidden;
-  }
-  
+.rwd-table {
+  margin: auto;
+  min-width: 300px;
+  max-width: 100%;
+  border-collapse: collapse;
+}
 
+.rwd-table tr:first-child {
+  border-top: none;
+  background: rgba(0, 0, 0, 0.1);
+  color: black;
+}
+
+.rwd-table tr {
+  border-top: 1px solid rgb(50, 74, 94);
+  border-bottom: 1px solid rgb(50, 74, 94);
+  background: 	rgba(0, 0, 0, 0.01);
+}
+
+.rwd-table tr:nth-child(odd):not(:first-child) {
+  background: 	rgba(0, 0, 0, 0.1);
+}
+
+.rwd-table th {
+  display: none;
+}
+
+.rwd-table td {
+  display: block;
+}
+
+.rwd-table td:first-child {
+  margin-top: .5em;
+}
+
+.rwd-table td:last-child {
+  margin-bottom: .5em;
+}
+
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 120px;
+  display: inline-block;
+  color:black;
+}
+
+.rwd-table th,
+.rwd-table td {
+  text-align: left;
+}
+
+.rwd-table {
+  color:black;
+  border-radius: 1em;
+  overflow: hidden;
+}
+
+.rwd-table tr {
+  border-color: rgb(50, 74, 94);
+}
+
+.rwd-table th,
+.rwd-table td {
+  padding: .5em 1em;
+}
+@media screen and (max-width: 601px) {
+  .rwd-table tr:nth-child(2) {
+    border-top: none;
+  }
+}
+@media screen and (min-width: 600px) {
+  .rwd-table tr:hover:not(:first-child) {
+    background:	#ffd05b
+  }
+  .rwd-table td:before {
+    display: none;
+  }
+  .rwd-table th,
+  .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+  .rwd-table th:first-child,
+  .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table th:last-child,
+  .rwd-table td:last-child {
+    padding-right: 0;
+  }
+  .rwd-table th,
+  .rwd-table td {
+    padding: 1em !important;
+  }
+}
+
+h1 {
+  text-align: center;
+  font-size: 2.4em;
+  color: rgb(50, 74, 94);
+}
+.container {
+  margin-top: 10vh;
+  display: block;
+  text-align: center;
+}
+
+@-webkit-keyframes leftRight {
+  0%    { -webkit-transform: translateX(0)}
+  25%   { -webkit-transform: translateX(-10px)}
+  75%   { -webkit-transform: translateX(10px)}
+  100%  { -webkit-transform: translateX(0)}
+}
+@keyframes leftRight {
+  0%    { transform: translateX(0)}
+  25%   { transform: translateX(-10px)}
+  75%   { transform: translateX(10px)}
+  100%  { transform: translateX(0)}
+}
+
+.container-image{
+  height: 10vh;
+  width: 5vh;
+}
