--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -1,7 +1,7 @@
 
 
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="sidenav.toggle()" class="icone-bars" aria-label="icone-bars">
+  <button mat-icon-button (click)="sidenav.open()" class="icone-bars" aria-label="icone-bars">
     <mat-icon>menu</mat-icon>
   </button>
   <img src="assets/images/logo.png" alt="logo-navbar" id="logo-navbar">
@@ -24,12 +24,12 @@
     <mat-nav-list>
 
       <!-- attention aux liens a qui rechargent la page a remplacer par button -->
-      <a mat-list-item [routerLink]="'/utilisateur'"><mat-icon class="icone-side">dashboard</mat-icon>Tableau de bord</a>
-      <a mat-list-item [routerLink]="'/agenda'"><mat-icon class="icone-side">today</mat-icon>Agenda</a>
-      <a mat-list-item [routerLink]="'/document'"><mat-icon class="icone-side">description</mat-icon>Documents</a>
-      <a mat-list-item [routerLink]="'/materiel'"><mat-icon class="icone-side">local_gas_station</mat-icon>Matériel</a>
-      <a mat-list-item [routerLink]="'/moniteur'"><mat-icon class="icone-side">video_label</mat-icon>Moniteur</a>
-      <a mat-list-item [routerLink]="'/garage'"><mat-icon class="icone-side">directions_car</mat-icon>Garage</a>
+      <a mat-list-item [routerLink]="'/utilisateur'" (click)="sidenav.close()"><mat-icon class="icone-side" >dashboard</mat-icon>Tableau de bord</a>
+      <a mat-list-item [routerLink]="'/agenda'" (click)="sidenav.close()"><mat-icon class="icone-side" >today</mat-icon>Agenda</a>
+      <a mat-list-item [routerLink]="'/document'" (click)="sidenav.close()"><mat-icon class="icone-side" >description</mat-icon>Documents</a>
+      <a mat-list-item [routerLink]="'/materiel'" (click)="sidenav.close()"><mat-icon class="icone-side" >local_gas_station</mat-icon>Matériel</a>
+      <a mat-list-item [routerLink]="'/moniteur'" (click)="sidenav.close()"><mat-icon class="icone-side" >video_label</mat-icon>Moniteur</a>
+      <a mat-list-item [routerLink]="'/garage'" (click)="sidenav.close()"><mat-icon class="icone-side" >directions_car</mat-icon>Garage</a>
 
     </mat-nav-list>
   </mat-sidenav>
