Maj materiel/liste plus ajout d'une photo

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
@@ -1,17 +1,18 @@
+<mat-card class="card-top">
+
+    <h2 style="margin: 0;">Listing équipements</h2>
+
+
+    <button mat-mini-fab color="warn" id="bouton-ajouter" [routerLink]="'/materiel/ajouter'">
+        <mat-icon>add</mat-icon>
+    </button>
+
+    
+</mat-card>
+
 <div class="container">
-
-    <div class="container-image">
-        
-            <img src="/assets/images/logo-big2.png" alt="logo-big" id="logo-big">
-      
-    </div>
-
-
-    <div>
     <h1>Liste du matériel</h1>
     <table class="rwd-table">
-        <!-- <table class="transparent" role="row">
-    <caption id="caption">Listing du matériel</caption> -->
         <thead>
             <tr>
                 <th scope="col">Id du matériel</th>
@@ -40,4 +41,4 @@
         </tbody>
     </table>
 </div>
-</div>
+
