--- a/pfr-registation-frontend/pfr-registation-angular/src/styles.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/styles.css
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+
+/* Début des classes concernant le système de cartes */
+
+
+
+/* Fin des classes pour les cartes. */
