--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.css
@@ -1,6 +1,6 @@
 
   
-  * {font-family: 'Open Sans', sans-serif;}
+
 
 .rwd-table {
   margin: auto;
@@ -106,7 +106,6 @@ h1 {
 }
 .container {
   margin-top: 10vh;
-  display: block;
   text-align: center;
 }
 
@@ -121,9 +120,30 @@ h1 {
   25%   { transform: translateX(-10px)}
   75%   { transform: translateX(10px)}
   100%  { transform: translateX(0)}
+} 
+
+#bouton-ajouter{
+  width: 40px;
+  height: 40px;
 }
 
-.container-image{
-  height: 10vh;
-  width: 5vh;
+.card-top{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 30px;
+  background-image: url("/assets/images/station2.png");
+  background-repeat: no-repeat;
+  background-position: center;
+
+}
+.icone-info-card{
+  margin-right: 5px;
+}
+
+.content{
+  padding-top: 2rem;
+  padding-left: 2.6rem;
+}
+.mat-elevation-z4 {
+  width: 250px;
 }
